bugfix: Correct navigation sm alignment bug.

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,16 @@ h6 {
   color: var(--white);
 }
 
+.nav-link {
+  padding: 0.5rem !important;
+}
+
+@media only screen and (min-width: 768px) {
+  .nav-link {
+    padding: 0.5rem 1rem !important;
+  }
+}
+
 /* Hero section */
 .hero-wrapper {
   background-color: var(--primary);
